incorporating reviewer suggestions
-Add more specific examples and advanced examples to API docs (and add
table of contents)
-Redesign Dataset Details page; add datasetdetailsfields.json with info
on how to organize fields
-Update and redesign Glossary with detailed description each MetaSeek
field; add glossary.json with glossary fields
-Add links in Header to docs/API docs/glossary
-Update welcome page image
-Add demo video link to readme

--- a/client/css/glossary.scss
+++ b/client/css/glossary.scss
@@ -5,8 +5,8 @@
 }
 
 .glossary-item {
-  margin: 0 15% 0 15%;
-  text-align: "justify";
+  margin: 0 15% 5% 15%;
+  text-align: "left";
   font-family: 'Roboto', sans-serif;
   font-size: 1.1em;
 }
