--- a/client/css/welcome.scss
+++ b/client/css/welcome.scss
@@ -114,14 +114,12 @@
 }
 
 .welcome-how-graphic {
-  margin: 36px 36px 18px 0;
-  margin-top: 5px;
-  float: left;
-  width: 480px;
+  float: center;
+  margin: 0px auto;
 }
 
 .welcome-how-graphic img {
-  width: 100%;
+  width: 70%;
 }
 
 .welcome-how-explainer {
